Fix left Community Chest image container overflowing into RW

--- a/pub/styles/board.css
+++ b/pub/styles/board.css
@@ -1,18 +1,18 @@
 body {
     background-color: #5EB4E5;
     font-family: "Oswald", "Helvetica", sans-serif;
-	margin-left: 20px;
+    margin-left: 20px;
     zoom: 80%; /* Added to fit the board vertically */
     overflow-y: hidden;
 }
 
 #gameZone {
-	display: table;
-	height: auto;
-	width: auto;
-	overflow: auto;
-	position: relative;
-	margin: auto;
+    display: table;
+    height: auto;
+    width: auto;
+    overflow: auto;
+    position: relative;
+    margin: auto;
 }
 
 #board {
@@ -59,7 +59,7 @@ body {
 }
 
 .propertyInfoImage {
-	display: block;
+    display: block;
     height: 100px;
     margin-left: auto;
     margin-right: auto;
@@ -614,23 +614,31 @@ body {
 }
 
 #leftCol7ImageContainer {
-	width: 100%;
-    height: 100%;
+    width: 100%;
+    height: 72%;
+    bottom: 3px;
+    position: absolute;
 }
 
 #leftCol7Image {
 
     transform: rotate(90deg);
 
-    max-height: 100%;
+    /* max-height: 100%; */
 
-    max-width: 100%;
+    /* max-width: 100%; */
 
-    top: -65px;
+    /* top: -65px; */
 
     position: relative;
 
     left: 19px;
+
+    height: 68.438px;
+
+    width: 71.781px;
+
+    bottom: 17px;
 }
 
 #leftCol8 {
@@ -1062,17 +1070,17 @@ body {
 
 #rightCol3Image {
 
-transform: rotate(-90deg);
+    transform: rotate(-90deg);
 
-max-height: 100%;
+    max-height: 100%;
 
-max-width: 100%;
+    max-width: 100%;
 
-top: -63px;
+    top: -63px;
 
-position: relative;
+    position: relative;
 
-left: 31px;
+    left: 31px;
 }
 
 #rightCol4 {
@@ -1363,48 +1371,44 @@ left: 31px;
 }
 
 .player {
-	position: absolute;
+    position: absolute;
     font-family: "Wingdings";
     font-size: 40px;
-	text-align: center;
-	transition: all ease-in-out 1000ms;
+    text-align: center;
+    transition: all ease-in-out 1000ms;
 }
 
 #player0 {
-	color: magenta;
-	text-shadow:
-	-2px -2px 0 #000,
-	2px -2px 0 #000,
-	-2px 2px 0 #000,
-	2px 2px 0 #000;
+    color: magenta;
+    text-shadow: -2px -2px 0 #000,
+    2px -2px 0 #000,
+    -2px 2px 0 #000,
+    2px 2px 0 #000;
 }
 
 #player1 {
-	color: blue;
-	text-shadow:
-	-2px -2px 0 #000,
-	2px -2px 0 #000,
-	-2px 2px 0 #000,
-	2px 2px 0 #000;
+    color: blue;
+    text-shadow: -2px -2px 0 #000,
+    2px -2px 0 #000,
+    -2px 2px 0 #000,
+    2px 2px 0 #000;
 
 }
 
 #player2 {
-	color: green;
-	text-shadow:
-	-1px -1px 0 #000,
-	1px -1px 0 #000,
-	-1px 1px 0 #000,
-	1px 1px 0 #000;
+    color: green;
+    text-shadow: -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 #player3 {
-	color: orange;
-	text-shadow:
-	-1px -1px 0 #000,
-	1px -1px 0 #000,
-	-1px 1px 0 #000,
-	1px 1px 0 #000;
+    color: orange;
+    text-shadow: -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 #playerList {
@@ -1413,65 +1417,65 @@ left: 31px;
     height: 450px;
     position: relative;
     width: 250px;
-	font-size: 20px;
-	text-align: center;
+    font-size: 20px;
+    text-align: center;
 }
 
 #playerSlot {
-	display: block;
-	position: relative;
-	margin-left: 30px;
+    display: block;
+    position: relative;
+    margin-left: 30px;
     margin-right: 30px;
-	margin-top: 20px;
-	text-align: center;
-	font-size: 20px;
+    margin-top: 20px;
+    text-align: center;
+    font-size: 20px;
 }
 
 #diceDisplay {
-  content: "";
-  clear: both;
-  display: table;
-  border: 2px solid black;
-  position: relative;
-  margin: auto;
-  margin-top: 20px;
+    content: "";
+    clear: both;
+    display: table;
+    border: 2px solid black;
+    position: relative;
+    margin: auto;
+    margin-top: 20px;
 }
 
 #dice1 {
-	float: left;
-	width: 33.33%;
-	padding: 5px;
-	margin-left: 15px;
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+    margin-left: 15px;
 }
 
 #dice2 {
-	float: left;
-	width: 33.33%;
-	padding: 5px;
+    float: left;
+    width: 33.33%;
+    padding: 5px;
 }
 
 #kickButton {
-	float: right;
-	margin-right: 20px;
+    float: right;
+    margin-right: 20px;
 }
 
 #resignButton {
-	float: right;
-	margin-right: 20px;
+    float: right;
+    margin-right: 20px;
 }
 
 #sidebar {
-	position: relative;
-	float: left;
-	background-color: #CEE6D0;
-	max-height: 900px;
+    position: relative;
+    float: left;
+    background-color: #CEE6D0;
+    max-height: 900px;
 }
 
 #sidebarAlt {
-	position: relative;
-	float: left;
-	background-color: #CEE6D0;
-	max-height: 900px;
+    position: relative;
+    float: left;
+    background-color: #CEE6D0;
+    max-height: 900px;
 }
 
 #otherInformation {
@@ -1480,8 +1484,8 @@ left: 31px;
     height: 450px;
     position: relative;
     width: 250px;
-	font-size: 20px;
-	text-align: center;
+    font-size: 20px;
+    text-align: center;
 }
 
 #propertyInfoAlt {
@@ -1520,7 +1524,7 @@ left: 31px;
 }
 
 .propertyInfoImageAlt {
-	display: block;
+    display: block;
     height: 100px;
     margin-left: auto;
     margin-right: auto;
@@ -1535,37 +1539,37 @@ left: 31px;
 }
 
 .propertyInfoButtonBoxAlt {
-	content: "";
-	clear: both;
-	display: table;
-	position: relative;
-	margin: auto;
-	margin-top: 70px;
-	float: center;
+    content: "";
+    clear: both;
+    display: table;
+    position: relative;
+    margin: auto;
+    margin-top: 70px;
+    float: center;
 }
 
 .propertyInfoButtonBuild {
-	float: left;
-	padding: 5px;
-	margin-left: 15px;
+    float: left;
+    padding: 5px;
+    margin-left: 15px;
 }
 
 .propertyInfoButtonBuildDisabled {
-	float: left;
-	padding: 5px;
-	margin-left: 15px;
-	font-color: gray;
+    float: left;
+    padding: 5px;
+    margin-left: 15px;
+    font-color: gray;
 }
 
 .propertyInfoButtonBuy {
-	float: left;
-	padding: 5px;
+    float: left;
+    padding: 5px;
 }
 
 .propertyInfoButtonBuyDisabled {
-	float: left;
-	padding: 5px;
-	font-color: gray;
+    float: left;
+    padding: 5px;
+    font-color: gray;
 }
 
 #communityChestCardsContainer {
